before starting beta

--- a/public/style.css
+++ b/public/style.css
@@ -1,2 +1,2 @@
-@import url("./css/import.css");
-@import url("./css/pages.css");
+@import url("./functionalities/import.css");
+@import url("./functionalities/pages.css");
